--- a/src/styles/layouts/_nav.scss
+++ b/src/styles/layouts/_nav.scss
@@ -2,33 +2,22 @@
   display: flex;
 
   &.open {
-    .wrapper {
+    nav {
       display: flex;
     }
 
-    .overlay {
+    #theme-switch {
       display: block;
     }
   }
 
-  .overlay {
+  #theme-switch {
     display: none;
-  }
-
-  .wrapper {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-    height: 100%;
-
-    @include breakpoint-down(sm) {
-      display: none;
-      position: fixed;
-      z-index: 21;
-      top: 0;
-      left: 0;
-    }
+    position: fixed;
+    bottom: var(--spacing-xl);
+    left: 50%;
+    margin: 0;
+    transform: translateX(-50%);
   }
 
   nav {
@@ -36,6 +25,18 @@
     font-weight: var(--font-bold);
     letter-spacing: 1px;
     text-transform: uppercase;
+
+    @include breakpoint-down(sm) {
+      display: none;
+      position: fixed;
+      z-index: 9;
+      top: 80px; // ~ header height
+      left: 0;
+      align-items: center;
+      justify-content: center;
+      width: 100%;
+      height: calc(100% - 160px);
+    }
 
     li {
       display: inline-block;
@@ -49,9 +50,12 @@
     }
 
     .nav-link {
-      margin-left: var(--spacing-lg);
       transition: color 240ms ease-in-out, opacity 240ms ease-in-out;
       color: var(--text-color-medium);
+
+      @include breakpoint-up(md) {
+        margin-left: var(--spacing-lg);
+      }
 
       &:hover,
       &.active {
@@ -64,7 +68,7 @@
 
   .trigger {
     position: relative;
-    z-index: 22;
+    z-index: 11;
     width: 40px;
     height: 40px;
     margin: -6px; // remove flickering
@@ -78,7 +82,6 @@
 
     .hl {
       position: absolute;
-      z-index: 10;
       width: 28px;
       height: 2px;
       overflow: hidden;
@@ -91,6 +94,8 @@
       width: 84px;
       height: 2px;
       will-change: transform;
+      transition-duration: 0.6s;
+      transition-timing-function: cubic-bezier(0.19, 1, 0.22, 1);
 
       &::after,
       &::before {
@@ -116,7 +121,6 @@
 
     .hl1,
     .hl2,
-    .hl3,
     .hc1,
     .hc2 {
       left: 6px;
@@ -130,10 +134,6 @@
       top: 23px;
     }
 
-    .hl3 {
-      top: 25px;
-    }
-
     .hc1,
     .hc2 {
       top: 20px;
@@ -145,17 +145,6 @@
 
     .hc2 {
       transform: rotate(-45deg);
-    }
-
-    .lh,
-    .hli {
-      transition-duration: 0.6s;
-      transition-timing-function: cubic-bezier(0.19, 1, 0.22, 1);
-    }
-
-    .hci1,
-    .hci2 {
-      transform: translateX(-33.3%);
     }
 
     .hli1 {
@@ -180,6 +169,12 @@
       transition-delay: 0.1s;
     }
 
+    .hci1,
+    .hci2 {
+      transform: translateX(-33.3%);
+      opacity: 0;
+    }
+
     .hci1 {
       transition-delay: 0s;
     }
@@ -202,9 +197,7 @@
       .hli1::before,
       .hli1::after,
       .hli2::before,
-      .hli2::after,
-      .hli3::before,
-      .hli3::after {
+      .hli2::after {
         transition-duration: 1s;
       }
 
@@ -218,15 +211,20 @@
   }
 
   &.open .trigger {
+    .hl1,
+    .hl2 {
+      opacity: 0;
+    }
+
     .hli1,
-    .hli2,
-    .hli3 {
+    .hli2 {
       transform: translateX(33.3%);
     }
 
     .hci1,
     .hci2 {
       transform: translateX(0);
+      opacity: 1;
     }
 
     .hli1 {
@@ -235,10 +233,6 @@
 
     .hli2 {
       transition-delay: 0.05s;
-    }
-
-    .hli3 {
-      transition-delay: 0.1s;
     }
 
     .hci1 {
@@ -260,9 +254,7 @@
       .hli1::before,
       .hli1::after,
       .hli2::before,
-      .hli2::after,
-      .hli3::before,
-      .hli3::after {
+      .hli2::after {
         transition-duration: 0s;
       }
     }
